--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -43,12 +43,23 @@
             android:background="@drawable/layout_style2"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/detailsTv"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:hint="Write your post here" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/detailsTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:hint="Write your post here" />
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
 
@@ -136,16 +147,5 @@
         app:layout_constraintTop_toBottomOf="@+id/detailsLay"
         app:layout_constraintVertical_bias="0.569"
         tools:src="@drawable/like1" />
-
-    <ImageView
-        android:id="@+id/homeBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/detailsLay"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/home" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
