--- a/app/src/main/res/layout/posts_row.xml
+++ b/app/src/main/res/layout/posts_row.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/layout_style"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginTop="5dp"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
