- Add functionality to sign in activity - Sent API key to main - Correct password constrain and add matching password - Modify API Client

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
 
         <EditText
             android:id="@+id/passEt"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
