--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -19,6 +19,17 @@
         app:layout_constraintBottom_toTopOf="@+id/signupBtn"
         app:layout_constraintEnd_toEndOf="parent">
 
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+
         <TextView
             android:id="@+id/nameTv"
             android:layout_width="match_parent"
@@ -27,6 +38,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:textAlignment="center" />
+
 
         <LinearLayout
             android:id="@+id/nameLay"
@@ -44,6 +56,8 @@
                 android:hint="Write your name here"
                 android:layout_margin="10dp"
                 />
+
+
             <TextView
                 android:id="@+id/nameConstrain"
                 android:layout_width="match_parent"
@@ -81,7 +95,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Write your email here"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:inputType="textEmailAddress"
+                />
             <TextView
                 android:id="@+id/emailConstrain"
                 android:layout_width="match_parent"
@@ -92,6 +108,35 @@
                 android:layout_margin="3dp"
                 android:visibility="invisible" />
         </LinearLayout>
+
+                <TextView
+                    android:id="@+id/imageUrlTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Image Url"
+                    android:textSize="20dp"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center" />
+
+                <LinearLayout
+                    android:id="@+id/imageUrlLay"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/layout_style2"
+                    >
+
+                    <EditText
+                        android:id="@+id/imageUrlEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Write your Image Url here"
+                        android:layout_margin="10dp"
+                        />
+
+                </LinearLayout>
 
         <TextView
             android:id="@+id/passTv"
@@ -158,7 +203,11 @@
                 android:layout_margin="10dp"
                 android:inputType="textPassword"
                 />
+
+
         </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
     <Button
