--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -101,8 +101,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
+        tools:listitem="@layout/comments_row"
+        tools:itemCount="3"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@+id/likeCommLay"
         app:layout_constraintBottom_toTopOf="@+id/commentLay"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +149,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsLay"
         app:layout_constraintVertical_bias="0.569"
-        tools:src="@drawable/like1" />
+        app:srcCompat="@drawable/like1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
