--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/postsRv"
         android:layout_width="383dp"
@@ -30,7 +29,6 @@
         android:layout_margin="12dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
@@ -40,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:text="Add Post" />
 
         <Button
@@ -50,5 +49,19 @@
             android:text="Sign in/up" />
 
     </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/goToProfile"
+        android:layout_width="75dp"
+        android:layout_height="96dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/postsRv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/icon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
