تم اضافة ستايلات و ايكونات تم تغيير الثيم و ازالة البار تم انشاء بار خاص و تسمية كل صفحة بأسم خاص تعديل بعض المشاكل في صفحة بوست جديد تعديل على صفحة تسجيل حساب انشاء زر للهوم في كل الصفحات ما عدا الصفحة الاساسيه

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,63 +5,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/postsRv"
-        android:layout_width="383dp"
-        android:layout_height="570dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:padding="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/barLay"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:orientation="horizontal"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="45dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
 
+
         <Button
             android:id="@+id/addPostBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:text="Add Post"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/frame_style"
+            android:onClick="onClick"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             android:visibility="invisible"
-            android:text="Add Post" />
+
+            android:textColor="@color/black"
+            android:textSize="17dp"
+            />
 
         <Button
             android:id="@+id/sinInBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Sign in/up" />
-
+            android:text="Sign in/up"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/frame_style"
+            android:onClick="onClick"
+            android:textSize="17dp"
+            android:layout_marginTop="5dp"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/barLay"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/gray"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="2"
+        android:text="Main Activity"
+        android:textColor="@color/white"
+        android:textSize="25dp" />
+        <ImageView
+            android:id="@+id/goToProfile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="20dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/postsRv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/profile_icon" />
     </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/goToProfile"
-        android:layout_width="75dp"
-        android:layout_height="96dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/postsRv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/icon" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
