--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,7 @@
         android:id="@+id/detailsLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/layout_style"
@@ -18,7 +18,8 @@
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/barLay"
+        >
 
         <LinearLayout
             android:id="@+id/titleLay"
@@ -101,11 +102,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
-        tools:listitem="@layout/comments_row"
-        tools:itemCount="3"
         android:layout_marginStart="30dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintTop_toBottomOf="@+id/likeCommLay"
         app:layout_constraintBottom_toTopOf="@+id/commentLay"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +118,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,16 +127,23 @@
         <EditText
             android:id="@+id/commentEt"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1"
+            android:background="@drawable/frame_style"
+            android:padding="10dp"
+            android:layout_marginRight="5dp"
             android:inputType="textPersonName"
             android:hint="Write a comment" />
 
         <Button
             android:id="@+id/commentBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Leave\n comment" />
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Leave\n comment"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/frame_style"
+
+            />
     </LinearLayout>
 
     <ImageView
@@ -149,6 +155,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailsLay"
         app:layout_constraintVertical_bias="0.569"
-        app:srcCompat="@drawable/like1" />
+        tools:src="@drawable/like1" />
+    <LinearLayout
+        android:id="@+id/barLay"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/gray"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="2"
+            android:text="Post Details"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
 
+        <ImageView
+            android:id="@+id/profileBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/home_icon" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
