--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,15 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/kkLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="188dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/profile"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/black"
+        android:layout_marginTop="170dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,12 +24,11 @@
         android:id="@+id/kkTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="30dp"
         android:text="Kotlin knights"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kkLogo" />
 
@@ -46,8 +49,10 @@
         <EditText
             android:id="@+id/nameEt"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:ems="10"
+            android:padding="10dp"
+            android:background="@drawable/frame_style2"
             android:inputType="textPersonName"
             android:hint="Username" />
 
@@ -55,44 +60,57 @@
             android:id="@+id/passEt"
             android:visibility="visible"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:ems="10"
+            android:padding="10dp"
+            android:background="@drawable/frame_style2"
+            android:layout_marginTop="8dp"
             android:hint="Password"
             android:inputType="textPassword" />
 
     </LinearLayout>
     <Button
         android:id="@+id/loginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
         android:text="Login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/infoLay"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/frame_style"
+        android:textSize="20sp"
+        android:layout_weight="1"
+        android:onClick="onClick"
+        android:textAllCaps="false"
+        android:textStyle="bold"
         />
+
 
     <TextView
         android:id="@+id/signupBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:layout_marginTop="20dp"
+        android:text="Sign up"
+        android:layout_marginTop="25dp"
         android:textColor="@color/purple_700"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginBtn"
         />
 
-    <TextView
-        android:id="@+id/guestBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="register as a guest"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/purple_700"
-        app:layout_constraintStart_toStartOf="parent"
+    <ImageView
+        android:id="@+id/homeBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/kkLogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupBtn"/>
+        app:layout_constraintHorizontal_bias="0.903"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.177"
+        app:srcCompat="@drawable/home2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
