--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -8,42 +8,65 @@
     <LinearLayout
         android:id="@+id/newPostLay"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_margin="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/layout_style"
         android:padding="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/addPostBtn"
+        app:layout_constraintTop_toBottomOf="@+id/barLay"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
         <TextView
             android:id="@+id/titleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:textAlignment="center" />
 
-        <LinearLayout
-            android:id="@+id/titleLay"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/layout_style2"
-            >
+                <LinearLayout
+                    android:id="@+id/titleLay"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/layout_style2"
+                    android:orientation="vertical">
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/titleEt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Write your title here"
-                android:layout_margin="20dp"/>
-        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <EditText
+                                android:id="@+id/titleEt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:hint="Write your title here" />
+                        </LinearLayout>
+                    </ScrollView>
+
+                </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/postTv"
@@ -51,7 +74,7 @@
             android:layout_height="wrap_content"
             android:text="Post"
             android:layout_marginTop="20dp"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:textAlignment="center"/>
 
@@ -59,7 +82,7 @@
             android:id="@+id/postLay"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="340dp"
+            android:layout_height="300dp"
             android:orientation="vertical"
             android:background="@drawable/layout_style2">
 
@@ -82,18 +105,55 @@
             </ScrollView>
 
         </LinearLayout>
+    </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/addPostBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="25dp"
+        android:layout_weight="1"
+        android:background="@drawable/frame_style"
         android:text="Add Post"
-        android:layout_marginBottom="20dp"
-        tools:layout_editor_absoluteY="731dp"
+        android:textAllCaps="false"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/newPostLay" />
+
+    <LinearLayout
+        android:id="@+id/barLay"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/gray"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="2"
+            android:text="New Post"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+        <ImageView
+            android:id="@+id/homeBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/home_icon" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
