--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/layout_style"
         android:padding="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/barLay"
         app:layout_constraintBottom_toTopOf="@+id/signupBtn"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textAlignment="center" />
 
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="Email"
             android:layout_marginTop="10dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textAlignment="center"/>
 
@@ -102,10 +102,8 @@
                 android:id="@+id/emailConstrain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 android:textColor="@color/red"
-                android:layout_margin="3dp"
+                android:padding="5dp"
                 android:visibility="invisible" />
         </LinearLayout>
 
@@ -114,7 +112,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Image Url"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_marginTop="5dp"
                     android:textStyle="bold"
                     android:textAlignment="center" />
@@ -137,13 +135,76 @@
                         />
 
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/webTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Website"
+                    android:textSize="20sp"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center" />
 
-        <TextView
+                <LinearLayout
+                    android:id="@+id/webLay"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/layout_style2">
+
+                    <EditText
+                        android:id="@+id/webEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Write your Image Url here"
+                        android:layout_margin="10dp" />
+
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/aboutTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="About"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    />
+                <LinearLayout
+                    android:id="@+id/aboutLay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/layout_style2"
+                    android:orientation="vertical">
+
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <EditText
+                                android:id="@+id/aboutEt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="8dp"
+                                android:hint="Write about your self here"
+                                />
+                        </LinearLayout>
+                    </ScrollView>
+                </LinearLayout>
+
+                <TextView
             android:id="@+id/passTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Password"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:textAlignment="center" />
@@ -151,7 +212,7 @@
         <LinearLayout
             android:id="@+id/passLay"
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/layout_style2"
             android:orientation="vertical">
@@ -181,7 +242,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Confirm Password"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:textAlignment="center" />
@@ -203,22 +264,52 @@
                 android:layout_margin="10dp"
                 android:inputType="textPassword"
                 />
-
-
         </LinearLayout>
+
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
     <Button
         android:id="@+id/signupBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SignUp"
-        android:layout_marginBottom="20dp"
-        tools:layout_editor_absoluteY="731dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="Sign up"
+        android:layout_marginBottom="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/frame_style"
+        android:textSize="20sp"
+        android:layout_weight="1"
+        android:onClick="onClick"
+        android:textAllCaps="false"
+        android:textStyle="bold"
         />
+
+    <LinearLayout
+        android:id="@+id/barLay"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/gray"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="2"
+            android:text="Sign up to KK"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
