--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -35,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textAlignment="center" />
@@ -74,6 +75,7 @@
             android:layout_height="wrap_content"
             android:text="Post"
             android:layout_marginTop="20dp"
+            android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textAlignment="center"/>
