--- a/app/src/main/res/drawable/layout_style2.xml
+++ b/app/src/main/res/drawable/layout_style2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp"/>
-    <stroke android:color="@color/gray"
+    <stroke android:color="@color/white"
         android:width="2dp" />
     <solid android:color="@color/white"/>
 
