--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -24,16 +24,28 @@
         <LinearLayout
             android:id="@+id/titleLay"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="75dp"
             android:background="@drawable/layout_style2"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/titleTv"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="Title here" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/titleTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:text="Title here" />
+                </LinearLayout>
+            </ScrollView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -57,8 +69,8 @@
                         android:id="@+id/detailsTv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
-                        android:hint="Write your post here" />
+                        android:padding="15dp"
+                        android:text="Write your post here" />
                 </LinearLayout>
             </ScrollView>
 
@@ -82,7 +94,7 @@
             android:id="@+id/commentTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Comments: 8 "
+            android:text=""
             android:textSize="25dp"
             android:textStyle="bold"
             />
@@ -91,7 +103,7 @@
             android:id="@+id/likeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Likes: 12 "
+            android:text=""
             android:textSize="25dp"
             android:textStyle="bold"
             />
@@ -101,10 +113,10 @@
         android:id="@+id/commentsRv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="10dp"
         android:layout_marginStart="30dp"
         tools:listitem="@layout/comments_row"
         tools:itemCount="6"
+        android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_marginEnd="30dp"
         app:layout_constraintTop_toBottomOf="@+id/likeCommLay"
@@ -163,7 +175,7 @@
         android:id="@+id/barLay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/gray"
+        android:background="@drawable/bar_style"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3"
