--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,6 @@
             android:onClick="onClick"
             android:textAllCaps="false"
             android:textStyle="bold"
-            android:visibility="invisible"
-
             android:textColor="@color/black"
             android:textSize="17dp"
             />
@@ -69,7 +67,7 @@
         android:id="@+id/barLay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/gray"
+        android:background="@drawable/bar_style"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="2"
@@ -90,16 +88,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="20dp"
-            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/postsRv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile_icon" />
     </LinearLayout>
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
