--- a/app/src/main/res/drawable-v24/bar_style.xml
+++ b/app/src/main/res/drawable-v24/bar_style.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="225"
-        android:startColor="@color/gray"
-        android:endColor="@color/gray"
+        android:startColor="@color/co1"
+        android:endColor="@color/co1"
         />
 </shape>
