--- a/app/src/main/res/drawable/frame_style.xml
+++ b/app/src/main/res/drawable/frame_style.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="@color/gray"
+        android:color="@color/co1"
         android:width="2dp"
         />
     <corners
         android:radius="15dp"
         />
+    <solid android:color="@color/co6"/>
 </shape>
