--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layout_style3"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -135,7 +136,7 @@
         android:id="@+id/barLay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/gray"
+        android:background="@drawable/bar_style"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3"
