--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layout_style3"
     tools:context=".ProfileActivity">
 
 
@@ -192,7 +193,7 @@
         android:id="@+id/barLay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/gray"
+        android:background="@drawable/bar_style"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3"
