--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layout_style3"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -32,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/name"
+            android:padding="5dp"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -73,6 +75,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/email"
+            android:padding="5dp"
+
             android:layout_marginTop="10dp"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -110,6 +114,7 @@
                     android:layout_height="wrap_content"
                     android:text="Image Url"
                     android:textSize="20sp"
+                    android:padding="5dp"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textStyle="bold"
@@ -138,6 +143,7 @@
                     android:layout_height="wrap_content"
                     android:text="Website"
                     android:textSize="20sp"
+                    android:padding="5dp"
                     android:textColor="@color/white"
                     android:layout_marginTop="5dp"
                     android:textStyle="bold"
@@ -165,6 +171,7 @@
                     android:textSize="20sp"
                     android:textColor="@color/white"
                     android:text="About"
+                    android:padding="5dp"
                     android:layout_marginTop="5dp"
                     android:textStyle="bold"
                     android:textAlignment="center"
@@ -202,6 +209,7 @@
             android:layout_height="wrap_content"
             android:text="@string/password"
             android:textSize="20sp"
+                    android:padding="5dp"
                     android:textColor="@color/white"
                     android:layout_marginTop="10dp"
             android:textStyle="bold"
@@ -239,6 +247,7 @@
             android:layout_height="wrap_content"
             android:text="Confirm Password"
             android:textSize="20sp"
+            android:padding="5dp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -247,6 +256,7 @@
         <LinearLayout
             android:id="@+id/passConfLay"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -291,7 +301,7 @@
         android:id="@+id/barLay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/gray"
+        android:background="@drawable/bar_style"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3"
@@ -307,6 +317,7 @@
             android:text="Sign up to KK"
             android:textColor="@color/white"
             android:textSize="25dp" />
+
         <ImageView
             android:id="@+id/homeBtn"
             android:layout_width="50dp"
@@ -314,4 +325,5 @@
             android:layout_weight="1"
             app:srcCompat="@drawable/home_icon" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
